@@ -1,6 +1,7 @@
 7.x-1.13.x
 ----------
  - #1810 Stop throwing exception on tables with only numeric columns, to prevent preview breaking.
+ - #1820 Use "accessURL" during resources harvest if "downloadURL" field is not available.
 
 
 7.x-1.13.3-RC1
